k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
# UPDATE THE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD THIS LINE ABOVE
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # for certificate https update above
spec:
  tls:
    - hosts:
      - k8s-multi.com
      - www.k8s-multi.com
      secretName: k8s-multi.com
      # HTTPS tls setup rule above
  rules:
    # - http:
    #     paths:
    #       - path: /?(.*)
    #       # UPDATE THIS LINE ABOVE
    #         backend:
    #           serviceName: client-cluster-ip-service
    #           servicePort: 3000
    #       - path: /api/?(.*)
    #       # UPDATE THIS LINE ABOVE
    #         backend:
    #           serviceName: server-cluster-ip-service
    #           servicePort: 5000
    # without HTTPS above
    - host: k8s-multi.com
      http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.k8s-multi.com
      http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
